--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Products Inventory</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="modify_quantity">Modify Quantity</string>
+    <string name="contact_supplier">Contact Supplier</string>
+    <string name="product_image">Product Image</string>
+    <string name="sale">Sale</string>
+    <string name="btn_select_image">Select Image</string>
+    <string name="tv_product_name">Product name</string>
+    <string name="tv_email_supplier">Email Supplier</string>
+    <string name="tv_price">Price</string>
+    <string name="tv_quantity">Quantity</string>
+    <string name="tv_enter_new_quantity">Enter new quantity</string>
 </resources>
