--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,16 @@
     <string name="app.message.productQty.updated">Product quantity updated!</string>
     <string name="app.message.productQty.error">Error trying to update the product quantity</string>
 
+    <string name="app.message.addProduct.title">Add New Product</string>
+    <string name="app.message.addProduct.validation">Insert</string>
+    <string name="app.message.addProduct.name">" name"</string>
+    <string name="app.message.addProduct.price">" price"</string>
+    <string name="app.message.addProduct.quantity">" quantity"</string>
+    <string name="app.message.addProduct.supplier">" supplier"</string>
+
+    <string name="app.message.save">Save</string>
+    <string name="app.message.cancel">Cancel</string>
+
+    <string name="app.message.add">Click the add button to create new products</string>
+
 </resources>
